# WHCA

./: CMakeLists.txt  main.cpp  whca.java
include/: Agent.hpp  Graph.hpp  Solver.hpp
src/: Agent.cpp  Solver.cpp
tests/: CMakeLists.txt  cases.cpp
